// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NovaDatePicker.vue disabled date 1`] = `
<div class="nova-date-picker is-open">
  <div class="nova-date-picker-toggle">
    <div class="nova-date-picker-inner"><input placeholder="请选择日期" autocomplete="off" readonly="readonly" type="text" class="nova-date-picker-input"> <span class="nova-date-picker-icon"></span></div>
  </div>
  <!---->
  <div data-mock="client-only">
    <div data-mock="mounting-portal" mountto="body" append="true">
      <div class="nova-dropdown nova-date-picker-dropdown nova-slide-up-enter nova-slide-up-enter-active" style="left: 0px; top: 0px;">
        <div class="nova-date-picker-months">
          <div data-month-offset="0" data-range-index="0" class="nova-date-picker-month">
            <div class="nova-date-picker-header">
              <div title="上个月" class="nova-date-picker-prev">
                上个月
              </div>
              <div class="nova-date-picker-title">
                2000年 1月
              </div>
              <div title="下个月" class="nova-date-picker-next">
                下个月
              </div>
            </div>
            <div class="nova-date-picker-body">
              <div class="nova-date-picker-weeks">
                <div class="nova-date-picker-week nova-date-picker-sun">日</div>
                <div class="nova-date-picker-week nova-date-picker-mon">一</div>
                <div class="nova-date-picker-week nova-date-picker-tue">二</div>
                <div class="nova-date-picker-week nova-date-picker-wed">三</div>
                <div class="nova-date-picker-week nova-date-picker-thu">四</div>
                <div class="nova-date-picker-week nova-date-picker-fri">五</div>
                <div class="nova-date-picker-week nova-date-picker-sat">六</div>
              </div>
              <div class="nova-date-picker-dates">
                <div class="nova-date-picker-date is-prev">
                  <div class="nova-date-picker-date-inner">
                    26
                  </div>
                </div>
                <div class="nova-date-picker-date is-prev">
                  <div class="nova-date-picker-date-inner">
                    27
                  </div>
                </div>
                <div class="nova-date-picker-date is-prev">
                  <div class="nova-date-picker-date-inner">
                    28
                  </div>
                </div>
                <div class="nova-date-picker-date is-prev">
                  <div class="nova-date-picker-date-inner">
                    29
                  </div>
                </div>
                <div class="nova-date-picker-date is-prev">
                  <div class="nova-date-picker-date-inner">
                    30
                  </div>
                </div>
                <div class="nova-date-picker-date is-prev">
                  <div class="nova-date-picker-date-inner">
                    31
                  </div>
                </div>
                <div class="nova-date-picker-date is-selected">
                  <div class="nova-date-picker-date-inner">
                    1
                  </div>
                </div>
                <div class="nova-date-picker-date">
                  <div class="nova-date-picker-date-inner">
                    2
                  </div>
                </div>
                <div class="nova-date-picker-date">
                  <div class="nova-date-picker-date-inner">
                    3
                  </div>
                </div>
                <div class="nova-date-picker-date">
                  <div class="nova-date-picker-date-inner">
                    4
                  </div>
                </div>
                <div class="nova-date-picker-date">
                  <div class="nova-date-picker-date-inner">
                    5
                  </div>
                </div>
                <div class="nova-date-picker-date">
                  <div class="nova-date-picker-date-inner">
                    6
                  </div>
                </div>
                <div class="nova-date-picker-date">
                  <div class="nova-date-picker-date-inner">
                    7
                  </div>
                </div>
                <div class="nova-date-picker-date">
                  <div class="nova-date-picker-date-inner">
                    8
                  </div>
                </div>
                <div class="nova-date-picker-date">
                  <div class="nova-date-picker-date-inner">
                    9
                  </div>
                </div>
                <div class="nova-date-picker-date">
                  <div class="nova-date-picker-date-inner">
                    10
                  </div>
                </div>
                <div class="nova-date-picker-date">
                  <div class="nova-date-picker-date-inner">
                    11
                  </div>
                </div>
                <div class="nova-date-picker-date">
                  <div class="nova-date-picker-date-inner">
                    12
                  </div>
                </div>
                <div class="nova-date-picker-date">
                  <div class="nova-date-picker-date-inner">
                    13
                  </div>
                </div>
                <div class="nova-date-picker-date">
                  <div class="nova-date-picker-date-inner">
                    14
                  </div>
                </div>
                <div class="nova-date-picker-date">
                  <div class="nova-date-picker-date-inner">
                    15
                  </div>
                </div>
                <div class="nova-date-picker-date is-disabled">
                  <div class="nova-date-picker-date-inner">
                    16
                  </div>
                </div>
                <div class="nova-date-picker-date is-disabled">
                  <div class="nova-date-picker-date-inner">
                    17
                  </div>
                </div>
                <div class="nova-date-picker-date is-disabled">
                  <div class="nova-date-picker-date-inner">
                    18
                  </div>
                </div>
                <div class="nova-date-picker-date is-disabled">
                  <div class="nova-date-picker-date-inner">
                    19
                  </div>
                </div>
                <div class="nova-date-picker-date is-disabled">
                  <div class="nova-date-picker-date-inner">
                    20
                  </div>
                </div>
                <div class="nova-date-picker-date is-disabled">
                  <div class="nova-date-picker-date-inner">
                    21
                  </div>
                </div>
                <div class="nova-date-picker-date is-disabled">
                  <div class="nova-date-picker-date-inner">
                    22
                  </div>
                </div>
                <div class="nova-date-picker-date is-disabled">
                  <div class="nova-date-picker-date-inner">
                    23
                  </div>
                </div>
                <div class="nova-date-picker-date is-disabled">
                  <div class="nova-date-picker-date-inner">
                    24
                  </div>
                </div>
                <div class="nova-date-picker-date is-disabled">
                  <div class="nova-date-picker-date-inner">
                    25
                  </div>
                </div>
                <div class="nova-date-picker-date is-disabled">
                  <div class="nova-date-picker-date-inner">
                    26
                  </div>
                </div>
                <div class="nova-date-picker-date is-disabled">
                  <div class="nova-date-picker-date-inner">
                    27
                  </div>
                </div>
                <div class="nova-date-picker-date is-disabled">
                  <div class="nova-date-picker-date-inner">
                    28
                  </div>
                </div>
                <div class="nova-date-picker-date is-disabled">
                  <div class="nova-date-picker-date-inner">
                    29
                  </div>
                </div>
                <div class="nova-date-picker-date is-disabled">
                  <div class="nova-date-picker-date-inner">
                    30
                  </div>
                </div>
                <div class="nova-date-picker-date is-disabled">
                  <div class="nova-date-picker-date-inner">
                    31
                  </div>
                </div>
                <div class="nova-date-picker-date is-next is-disabled">
                  <div class="nova-date-picker-date-inner">
                    1
                  </div>
                </div>
                <div class="nova-date-picker-date is-next is-disabled">
                  <div class="nova-date-picker-date-inner">
                    2
                  </div>
                </div>
                <div class="nova-date-picker-date is-next is-disabled">
                  <div class="nova-date-picker-date-inner">
                    3
                  </div>
                </div>
                <div class="nova-date-picker-date is-next is-disabled">
                  <div class="nova-date-picker-date-inner">
                    4
                  </div>
                </div>
                <div class="nova-date-picker-date is-next is-disabled">
                  <div class="nova-date-picker-date-inner">
                    5
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div class="nova-date-picker-tooltip" style="left: 0px; top: 0px; display: none;">

        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`NovaDatePicker.vue prop locale should works 1`] = `
<div class="nova-date-picker is-open">
  <div class="nova-date-picker-toggle">
    <div class="nova-date-picker-inner"><input placeholder="請選擇日期" autocomplete="off" readonly="readonly" type="text" class="nova-date-picker-input"> <span class="nova-date-picker-icon"></span></div>
  </div>
  <!---->
  <div data-mock="client-only">
    <div data-mock="mounting-portal" mountto="body" append="true">
      <div class="nova-dropdown nova-date-picker-dropdown nova-slide-up-enter nova-slide-up-enter-active" style="left: 0px; top: 0px;">
        <div class="nova-date-picker-months">
          <div data-month-offset="0" data-range-index="0" class="nova-date-picker-month">
            <div class="nova-date-picker-header">
              <div title="上個月" class="nova-date-picker-prev">
                上個月
              </div>
              <div class="nova-date-picker-title">
                2000年 1月
              </div>
              <div title="下個月" class="nova-date-picker-next">
                下個月
              </div>
            </div>
            <div class="nova-date-picker-body">
              <div class="nova-date-picker-weeks">
                <div class="nova-date-picker-week nova-date-picker-sun">日</div>
                <div class="nova-date-picker-week nova-date-picker-mon">一</div>
                <div class="nova-date-picker-week nova-date-picker-tue">二</div>
                <div class="nova-date-picker-week nova-date-picker-wed">三</div>
                <div class="nova-date-picker-week nova-date-picker-thu">四</div>
                <div class="nova-date-picker-week nova-date-picker-fri">五</div>
                <div class="nova-date-picker-week nova-date-picker-sat">六</div>
              </div>
              <div class="nova-date-picker-dates">
                <div class="nova-date-picker-date is-prev">
                  <div class="nova-date-picker-date-inner">
                    26
                  </div>
                </div>
                <div class="nova-date-picker-date is-prev">
                  <div class="nova-date-picker-date-inner">
                    27
                  </div>
                </div>
                <div class="nova-date-picker-date is-prev">
                  <div class="nova-date-picker-date-inner">
                    28
                  </div>
                </div>
                <div class="nova-date-picker-date is-prev">
                  <div class="nova-date-picker-date-inner">
                    29
                  </div>
                </div>
                <div class="nova-date-picker-date is-prev">
                  <div class="nova-date-picker-date-inner">
                    30
                  </div>
                </div>
                <div class="nova-date-picker-date is-prev">
                  <div class="nova-date-picker-date-inner">
                    31
                  </div>
                </div>
                <div class="nova-date-picker-date is-selected">
                  <div class="nova-date-picker-date-inner">
                    1
                  </div>
                </div>
                <div class="nova-date-picker-date">
                  <div class="nova-date-picker-date-inner">
                    2
                  </div>
                </div>
                <div class="nova-date-picker-date">
                  <div class="nova-date-picker-date-inner">
                    3
                  </div>
                </div>
                <div class="nova-date-picker-date">
                  <div class="nova-date-picker-date-inner">
                    4
                  </div>
                </div>
                <div class="nova-date-picker-date">
                  <div class="nova-date-picker-date-inner">
                    5
                  </div>
                </div>
                <div class="nova-date-picker-date">
                  <div class="nova-date-picker-date-inner">
                    6
                  </div>
                </div>
                <div class="nova-date-picker-date">
                  <div class="nova-date-picker-date-inner">
                    7
                  </div>
                </div>
                <div class="nova-date-picker-date">
                  <div class="nova-date-picker-date-inner">
                    8
                  </div>
                </div>
                <div class="nova-date-picker-date">
                  <div class="nova-date-picker-date-inner">
                    9
                  </div>
                </div>
                <div class="nova-date-picker-date">
                  <div class="nova-date-picker-date-inner">
                    10
                  </div>
                </div>
                <div class="nova-date-picker-date">
                  <div class="nova-date-picker-date-inner">
                    11
                  </div>
                </div>
                <div class="nova-date-picker-date">
                  <div class="nova-date-picker-date-inner">
                    12
                  </div>
                </div>
                <div class="nova-date-picker-date">
                  <div class="nova-date-picker-date-inner">
                    13
                  </div>
                </div>
                <div class="nova-date-picker-date">
                  <div class="nova-date-picker-date-inner">
                    14
                  </div>
                </div>
                <div class="nova-date-picker-date">
                  <div class="nova-date-picker-date-inner">
                    15
                  </div>
                </div>
                <div class="nova-date-picker-date">
                  <div class="nova-date-picker-date-inner">
                    16
                  </div>
                </div>
                <div class="nova-date-picker-date">
                  <div class="nova-date-picker-date-inner">
                    17
                  </div>
                </div>
                <div class="nova-date-picker-date">
                  <div class="nova-date-picker-date-inner">
                    18
                  </div>
                </div>
                <div class="nova-date-picker-date">
                  <div class="nova-date-picker-date-inner">
                    19
                  </div>
                </div>
                <div class="nova-date-picker-date">
                  <div class="nova-date-picker-date-inner">
                    20
                  </div>
                </div>
                <div class="nova-date-picker-date">
                  <div class="nova-date-picker-date-inner">
                    21
                  </div>
                </div>
                <div class="nova-date-picker-date">
                  <div class="nova-date-picker-date-inner">
                    22
                  </div>
                </div>
                <div class="nova-date-picker-date">
                  <div class="nova-date-picker-date-inner">
                    23
                  </div>
                </div>
                <div class="nova-date-picker-date">
                  <div class="nova-date-picker-date-inner">
                    24
                  </div>
                </div>
                <div class="nova-date-picker-date">
                  <div class="nova-date-picker-date-inner">
                    25
                  </div>
                </div>
                <div class="nova-date-picker-date">
                  <div class="nova-date-picker-date-inner">
                    26
                  </div>
                </div>
                <div class="nova-date-picker-date">
                  <div class="nova-date-picker-date-inner">
                    27
                  </div>
                </div>
                <div class="nova-date-picker-date">
                  <div class="nova-date-picker-date-inner">
                    28
                  </div>
                </div>
                <div class="nova-date-picker-date">
                  <div class="nova-date-picker-date-inner">
                    29
                  </div>
                </div>
                <div class="nova-date-picker-date">
                  <div class="nova-date-picker-date-inner">
                    30
                  </div>
                </div>
                <div class="nova-date-picker-date">
                  <div class="nova-date-picker-date-inner">
                    31
                  </div>
                </div>
                <div class="nova-date-picker-date is-next">
                  <div class="nova-date-picker-date-inner">
                    1
                  </div>
                </div>
                <div class="nova-date-picker-date is-next">
                  <div class="nova-date-picker-date-inner">
                    2
                  </div>
                </div>
                <div class="nova-date-picker-date is-next">
                  <div class="nova-date-picker-date-inner">
                    3
                  </div>
                </div>
                <div class="nova-date-picker-date is-next">
                  <div class="nova-date-picker-date-inner">
                    4
                  </div>
                </div>
                <div class="nova-date-picker-date is-next">
                  <div class="nova-date-picker-date-inner">
                    5
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div class="nova-date-picker-tooltip" style="left: 0px; top: 0px; display: none;">

        </div>
      </div>
    </div>
  </div>
</div>
`;
